[gd_scene load_steps=6 format=3 uid="uid://c1ohq85ubkwjq"]

[ext_resource type="Script" path="res://Card Scenes/Card_temp.gd" id="1_lar1v"]
[ext_resource type="Texture2D" uid="uid://c73un0dlaljfu" path="res://Assets/CardAssets/earthen_card_backing.png" id="2_mrj3y"]
[ext_resource type="Texture2D" uid="uid://b5g4t8i7v4b1s" path="res://Assets/CardAssets/basic_textbox.png" id="3_t8rbp"]
[ext_resource type="Texture2D" uid="uid://uxuq3wa3ogy1" path="res://Assets/CardAssets/costTracker.png" id="4_lkdsv"]
[ext_resource type="Texture2D" uid="uid://bi8ern5xxbma2" path="res://Assets/CardAssets/basic_upper.png" id="5_hte17"]

[node name="Card" type="Node2D"]
z_index = 1
scale = Vector2(0.15, 0.15)
script = ExtResource("1_lar1v")

[node name="AbilityBox" type="Node2D" parent="."]
z_index = 1
position = Vector2(-2, 29)

[node name="Textbox" type="Sprite2D" parent="AbilityBox"]
self_modulate = Color(0.326024, 0.288117, 0.259698, 1)
position = Vector2(-1, 224.25)
scale = Vector2(0.997214, 0.928969)
texture = ExtResource("3_t8rbp")

[node name="Ability" type="Label" parent="AbilityBox"]
light_mask = 2
visibility_layer = 2
offset_left = -343.0
offset_top = 71.0
offset_right = 342.0
offset_bottom = 378.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Card Ability"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CardBackground" type="Sprite2D" parent="."]
position = Vector2(-3.83658, 5.00004)
scale = Vector2(1.13023, 1.09743)
texture = ExtResource("2_mrj3y")

[node name="Name" type="Label" parent="CardBackground"]
light_mask = 2
visibility_layer = 2
offset_left = -301.853
offset_top = -473.834
offset_right = 284.147
offset_bottom = -383.834
pivot_offset = Vector2(-150.412, 54.6728)
theme_override_font_sizes/font_size = 65
text = "Card Name"
horizontal_alignment = 1

[node name="CRDisplay" type="Node2D" parent="."]
z_index = 1
position = Vector2(495, -210)

[node name="Sprite2D" type="Sprite2D" parent="CRDisplay"]
self_modulate = Color(0.32549, 0.286275, 0.258824, 1)
light_mask = 4
visibility_layer = 4
position = Vector2(-250, -90)
scale = Vector2(1.66969, 1.66969)
texture = ExtResource("4_lkdsv")

[node name="CR_Label" type="Label" parent="CRDisplay"]
light_mask = 2
visibility_layer = 2
offset_left = -320.0
offset_top = -150.0
offset_right = -228.0
offset_bottom = -62.0
scale = Vector2(1.53407, 1.53407)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ActionReaction" type="Node2D" parent="."]
position = Vector2(-2, 12)

[node name="Action_Or_Reaction" type="Label" parent="ActionReaction"]
light_mask = 2
visibility_layer = 2
offset_left = -293.0
offset_top = 408.0
offset_right = 288.0
offset_bottom = 508.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "Re?Action"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CardImage" type="Node2D" parent="."]

[node name="ArtFrame" type="Sprite2D" parent="CardImage"]
position = Vector2(-2, 29)
texture = ExtResource("5_hte17")

[node name="CardArt" type="Sprite2D" parent="CardImage"]
